--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,7 @@
 </head>
 <body>
     <div>
-        <img src="C:\Users\lione\Documents\Evalution versionnig\image\sakora.jpg" class="hero-image" alt="">
-        <div class="hero-text">
-          <h1>Je suis Dasini Lionel</h1>
-          <p>et je suis un étudiant en bachelor IT</p>
-          
+        <button type="button" class="btn btn-light">Light</button>  
         </div>
       </div>
       
